--- a/public/style.css
+++ b/public/style.css
@@ -1,31 +1,18 @@
 * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
-  body {
-    font-family: sans-serif;
-  }
-  #sand-image {
-      height:20px;
-      width:20px;
-  }
- 
-  p {
-    margin: 12px 0 0 0;
-  }
+
   
   a {
-    color: #000000;
     text-decoration: none;
   }
   
-  small {
-    color: #828282;
-  }
   
   header {
-    background-color: #6b32e1;
-    color: #fff;
+    background-color: firebrick;
+    color: cornsilk;
     padding: 3px;
     height: 26px;
   }
@@ -34,55 +21,58 @@
     margin-right: 10px;
     width: 20px;
     height: 20px;
-    border: 1px white solid;
+    border: 1px black;
     vertical-align: bottom;
   }
   
-  form {
-    padding: 15px;
-  }
-  
-  label {
-    float: left;
-    width: 60px;
-    
-  }
-  
-  input {
-    display: block;
-    width: calc(100% - 60px);
-    padding:4px 2px;
-    margin: 0 0 10px 0;
-    border:solid 1px #aacfe4;
-  }
-  
-  textarea {
-    border:solid 1px #aacfe4;
-    width: 100%;
-  }
-  
+ 
   .news-list {
-    background-color: #f6f6ef;
-    width: 85%;
+    background-color: cornsilk;
+    width: 50%;
     margin: 12px auto;
-    padding-bottom: 25px;
+    padding-top:10px ;
+    padding-bottom: 2px;
   }
   
-  
-  .news-item {
-    padding: 0 15px;
-  }
   
   .news-position {
-    color: dodgerblue;
+    color: firebrick;
   }
   
-  .news-info {
-    margin-left: 40px;
-  }
 
-
-  nav {
+.nav-link {
     color: firebrick;
+    border: black;
     
+}
+
+.sand img{
+    width: 300px;
+    height: 220px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.upper{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.lower{
+    text-align: center;
+    justify-content: center;
+}
+.nav-link a {
+display: flex;
+justify-content: left;
+text-align: center;
+margin-left: auto;
+margin-right: auto;
+font-size: larger;
+font-family: arial black;
+
 }
